Make Twilio credentials optional for server startup
- Server no longer exits if TWILIO_ACCOUNT_SID/AUTH_TOKEN are missing
- Shows warning instead of error
- Allows WebSocket server to start in Codespaces without env vars
- Students can test WebSocket connectivity before adding credentials
- twilioClient is null if credentials not provided

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ TWILIO_PHONE_NUMBER=+1234567890
 # OpenAI Configuration
 OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+# Conversational Intelligence (Optional - for call analytics)
+# CI_SERVICE_SID=ISxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # Server Configuration
 PORT=3000
 
