Force port 3000 to be public on Codespace startup
- Added setup.sh script that runs on postStartCommand
- Uses gh CLI and GitHub API to set port visibility to public
- Ensures WebSocket connections work without authentication
- Students won't need to manually configure port visibility

Technical approach:
- Tries gh CLI first (if available)
- Falls back to direct GitHub API call
- Runs before npm start to ensure port is public before accepting connections

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,14 +13,15 @@
   "portsAttributes": {
     "3000": {
       "label": "WebSocket Server",
-      "onAutoForward": "notify",
-      "visibility": "public"
+      "onAutoForward": "openBrowser",
+      "visibility": "public",
+      "protocol": "https"
     }
   },
 
   "postCreateCommand": "npm install",
 
-  "postStartCommand": "npm start",
+  "postStartCommand": "bash .devcontainer/setup.sh && npm start",
 
   "customizations": {
     "vscode": {
