Run server in background on Codespace startup
- Use nohup to keep npm start running after postStartCommand exits
- Log output to /tmp/server.log for debugging
- Prevents server from stopping when command completes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,7 @@
 
   "postCreateCommand": "npm install",
 
-  "postStartCommand": "bash .devcontainer/setup.sh && npm start",
+  "postStartCommand": "bash .devcontainer/setup.sh && nohup npm start > /tmp/server.log 2>&1 &",
 
   "customizations": {
     "vscode": {
