--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,9 +19,7 @@
     }
   },
 
-  "postCreateCommand": "npm install",
-
-  "postStartCommand": "bash .devcontainer/startup.sh",
+  "postCreateCommand": "npm install && bash .devcontainer/startup.sh",
 
   "customizations": {
     "vscode": {
