Convert starter pack to ES modules for Deno compatibility
- Added "type": "module" to package.json
- Converted all require() to import statements
- Converted all module.exports to export default
- Added .js extensions to all local imports (required for ES modules)
- Changed WebSocket.Server to WebSocketServer (named import)

Files updated:
- package.json
- server.js
- handlers/voice-handler.js
- handlers/websocket-handler.js
- handlers/tools.js
- config/system-prompt.js

This makes the code compatible with both Node.js and Deno Deploy

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Your AI-powered voice assistant built with Twilio ConversationRelay",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node notify-deployment.js && node server.js",
     "dev": "nodemon server.js",
